--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -12,6 +12,7 @@ appcompat = "1.7.0"
 material = "1.12.0"
 activity = "1.9.3"
 constraintlayout = "2.2.0"
+moshiKotlin = "1.15.1"
 moxy = "2.2.2"
 picassoVersion = "2.71828"
 retrofit = "2.9.0"
@@ -35,6 +36,7 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+moshi-kotlin = { module = "com.squareup.moshi:moshi-kotlin", version.ref = "moshiKotlin" }
 moxy = { module = "com.github.moxy-community:moxy", version.ref = "moxy" }
 moxy-androidx = { module = "com.github.moxy-community:moxy-androidx", version.ref = "moxy" }
 moxy-compiler = { module = "com.github.moxy-community:moxy-compiler", version.ref = "moxy" }
