--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,14 @@
         tools:targetApi="31">
         <activity
             android:name=".ui.chats.ChatsActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".ui.chat.ChatActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".ui.auth.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,7 +32,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.chat.ChatActivity"
+            android:name=".ui.auth.RegisterActivity"
             android:exported="false">
         </activity>
     </application>
