--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,7 @@
         </activity>
         <activity
             android:name=".ui.chat.ChatActivity"
+            android:windowSoftInputMode="adjustResize"
             android:exported="false">
         </activity>
         <activity
