--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
     <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.MANAGE_EXTERNAL_STORAGE" />
+
     <application
         android:name=".MainApplication"
         android:networkSecurityConfig="@xml/network_security_config"
@@ -15,7 +18,7 @@
         android:theme="@style/Theme.MyChat"
         tools:targetApi="31">
         <activity
-            android:name=".ui.chats.ChatsActivity"
+            android:name=".ui.main.MainActivity"
             android:exported="false">
         </activity>
         <activity
