--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
             android:exported="false">
         </activity>
         <activity
-            android:name=".ui.auth.LoginActivity"
+            android:name=".ui.auth.login.LoginActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -36,7 +36,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ui.auth.RegisterActivity"
+            android:name=".ui.auth.register.RegisterActivity"
             android:exported="false">
         </activity>
     </application>
