--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,14 +2,10 @@
 agp = "8.5.2"
 circleimageview = "3.1.0"
 converterGson = "2.9.0"
-converterGsonVersion = "2.9.0"
 converterScalars = "2.11.0"
-dagger = "2.51.1"
-daggerAndroidProcessor = "2.35.1"
 glide = "4.15.1"
 glideVersion = "4.15.1"
 hiltAndroid = "2.51.1"
-hiltCompiler = "2.48.1"
 kotlin = "2.0.21"
 coreKtx = "1.15.0"
 junit = "4.13.2"
@@ -18,35 +14,26 @@ espressoCore = "3.6.1"
 appcompat = "1.7.0"
 kotlinxCoroutinesAndroid = "1.9.0"
 kotlinxSerializationJson = "1.6.3"
-loggingInterceptor = "4.11.0"
 material = "1.12.0"
 activity = "1.9.3"
 constraintlayout = "2.2.0"
 moshiKotlin = "1.15.1"
-moxy = "2.2.2"
 okhttp = "4.11.0"
 picassoVersion = "2.71828"
 retrofit = "2.11.0"
-rxandroid = "3.0.2"
-rxjava = "3.1.5"
 navigationFragmentKtx = "2.8.4"
 navigationUiKtx = "2.8.4"
 swiperefreshlayout = "1.1.0"
-
+adapterCoroutines = "0.9.2"
 
 [libraries]
-adapter-kotlin-coroutines = { module = "com.squareup.retrofit2:adapter-kotlin-coroutines", version.ref = "converterGson" }
+adapter-kotlin-coroutines = { module = "com.squareup.retrofit2:adapter-kotlin-coroutines", version.ref = "adapterCoroutines" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-swiperefreshlayout = { module = "androidx.swiperefreshlayout:swiperefreshlayout", version.ref = "swiperefreshlayout" }
 circleimageview = { module = "de.hdodenhof:circleimageview", version.ref = "circleimageview" }
 compiler = { module = "com.github.bumptech.glide:compiler", version.ref = "glide" }
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "converterGson" }
 converter-scalars = { module = "com.squareup.retrofit2:converter-scalars", version.ref = "converterScalars" }
-dagger = { module = "com.google.dagger:dagger", version.ref = "dagger" }
-dagger-android = { module = "com.google.dagger:dagger-android", version.ref = "dagger" }
-dagger-android-processor = { module = "com.google.dagger:dagger-android-processor", version.ref = "daggerAndroidProcessor" }
-dagger-android-support = { module = "com.google.dagger:dagger-android-support", version.ref = "dagger" }
-dagger-compiler = { module = "com.google.dagger:dagger-compiler", version.ref = "dagger" }
 glide-v4142 = { module = "com.github.bumptech.glide:glide", version.ref = "glideVersion" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
 hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltAndroid" }
