--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,10 @@
             android:exported="false">
         </activity>
         <activity
+            android:name=".ui.chat.edit.EditActivity"
+            android:exported="false">
+        </activity>
+        <activity
             android:name=".ui.auth.login.LoginActivity"
             android:exported="true">
             <intent-filter>
